// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinbutton - Snapshot Tests renders correctly with all props 1`] = `
<div
  className="spinbutton-container"
>
  <input
    aria-invalid={false}
    aria-labelledby="label-id"
    aria-valuemax={10}
    aria-valuemin={0}
    aria-valuenow={5}
    aria-valuetext="5"
    className=""
    onChange={[Function]}
    onKeyDown={[Function]}
    role="spinbutton"
    type="text"
    value={5}
  />
  <button
    aria-label="Increase value"
    className="spinbutton-arrow spinbutton-arrow-up"
    onClick={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      aria-hidden="true"
    >
      ▲
    </span>
  </button>
  <button
    aria-label="Decrease value"
    className="spinbutton-arrow spinbutton-arrow-down"
    onClick={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      aria-hidden="true"
    >
      ▼
    </span>
  </button>
</div>
`;

exports[`Spinbutton - Snapshot Tests renders correctly with default props 1`] = `
<div
  className="spinbutton-container"
>
  <input
    aria-invalid={false}
    aria-valuemax={10}
    aria-valuemin={0}
    aria-valuenow={0}
    aria-valuetext="0"
    className=""
    onChange={[Function]}
    onKeyDown={[Function]}
    role="spinbutton"
    type="text"
    value={0}
  />
  <button
    aria-label="Increase value"
    className="spinbutton-arrow spinbutton-arrow-up"
    onClick={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      aria-hidden="true"
    >
      ▲
    </span>
  </button>
  <button
    aria-label="Decrease value"
    className="spinbutton-arrow spinbutton-arrow-down"
    onClick={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      aria-hidden="true"
    >
      ▼
    </span>
  </button>
</div>
`;
